--- a/config/custom_components/winch_cover/manifest.json
+++ b/config/custom_components/winch_cover/manifest.json
@@ -1,5 +1,6 @@
 
 {
+    "version": "0.0.1",
     "domain": "wieszok",
     "name": "Chicken gate",
     "documentation": "https://github.com/home-assistant/example-custom-config/tree/master/custom_components/example_sensor/",
